# opendiamond-scope

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  README.md.license  noxfile.py  poetry.lock.license  pyproject.toml  tasks.py  tox.ini
.reuse/: dep5
opendiamond/: cli.py  scope.py
opendiamond/console/: options.py  scope.py  scope_generate.py  scope_import.py
opendiamond/scope/: cli_import.py
tests/: test_console_scope.py  test_cookies.py  test_scope_generate.py  test_scope_import.py  test_scope_verify.py
