# SPDX-FileCopyrightText: 2021 Carnegie Mellon University
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "opendiamond-scope"
version = "10.1.1"
description = "Opendiamond scope manipulation library and tools"
authors = [
    "Benjamin Gilbert <bgilbert@cs.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
    "Ziqiang Feng <zf@cs.cmu.edu>",
]
license = "EPL-1.0"

packages = [
    { include = "opendiamond" },
]
#include = [
#    { path = "LICENSES", format = "sdist" },
#    { path = "tests", format = "sdist" },
#]
#exclude = [
#    "**/*.pyc",
#    "**/*.pyi",
#]

[tool.poetry.dependencies]
python = ">=2.7,<4.0"
M2Crypto = ">=0.21.1"
python-dateutil = ">=1.5"
click = {version = "^8.0.3", python = ">=3.6.0"}
click-plugins = {version = "^1.1.1", python = ">=3.6.0"}

[tool.poetry.dev-dependencies]
pre-commit = {version = "^2.15.0", python = "^3.6.1"}
pytest = {version = "^5.2", python = "^3.5"}
tox = {version = "^3.24.4", python = ">=3.5.0"}

[tool.poetry.scripts]
opendiamond = 'opendiamond.cli:cli'

[tool.poetry.plugins."opendiamond.cli_plugins"]
scope = 'opendiamond.console.scope:scope'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
