# SPDX-FileCopyrightText: 2021 Carnegie Mellon University
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "opendiamond-scope"
version = "10.1.2"
description = "Opendiamond scope manipulation library and tools"
authors = [
    "Benjamin Gilbert <bgilbert@cs.cmu.edu>",
    "Jan Harkes <jaharkes@cs.cmu.edu>",
    "Ziqiang Feng <zf@cs.cmu.edu>",
]
license = "EPL-1.0"

packages = [
    { include = "opendiamond" },
]
include = [
    { path = "LICENSES", format = "sdist" },
    { path = "tests", format = "sdist" },
]
#exclude = [
#    "**/*.pyc",
#    "**/*.pyi",
#]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
M2Crypto = ">=0.21.1"
python-dateutil = ">=1.5"
click = "^8.0.3"
click-plugins = "^1.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^5.2"
tox = "^3.24.4"

[tool.poetry.scripts]
opendiamond = 'opendiamond.cli:cli'
opendiamond-scope = 'opendiamond.console.scope:cli'
cookiecutter = 'opendiamond.console.scope_generate:generate'
diamond-newscope = 'opendiamond.console.scope:import_'

[tool.poetry.plugins."opendiamond.cli_plugins"]
scope = 'opendiamond.console.scope:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
